librp-sys/src/bindings.rs

extern "C" {
    #[doc = " Returns the ADC buffer in Volt units from specified position and desired\n size. Output buffer must be at least 'size' long.\n @param channel Channel A or B for which we want to retrieve the ADC buffer.\n @param pos Starting position of the ADC buffer to retrieve\n @param size Length of the ADC buffer to retrieve. Returns length of filled\n buffer. In case of too small buffer, required size is returned.\n @param buffer The output buffer gets filled with the selected part of the ADC\n buffer.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetDataV(
        channel: rp_channel_t,
        pos: u32,
        size: *mut u32,
        buffer: *mut f32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the ADC buffer in Volt units from specified position and desired\n size. Output buffer must be at least 'size' long.\n @param pos Starting position of the ADC buffer to retrieve\n @param size Length of the ADC buffer to retrieve. Returns length of filled\n buffer. In case of too small buffer, required size is returned.\n @param buffer1 The output buffer gets filled with the selected part of the\n ADC buffer for channel 1.\n @param buffer2 The output buffer gets filled with the selected part of the\n ADC buffer for channel 2.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetDataV2(
        pos: u32,
        size: *mut u32,
        buffer1: *mut f32,
        buffer2: *mut f32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the ADC buffer in Volt units from specified position and desired\n size. Output buffer must be at least 'size' long.\n @param pos Starting position of the ADC buffer to retrieve\n @param size Length of the ADC buffer to retrieve. Returns length of filled\n buffer. In case of too small buffer, required size is returned.\n @param buffer1 The output buffer gets filled with the selected part of the\n ADC buffer for channel 1.\n @param buffer2 The output buffer gets filled with the selected part of the\n ADC buffer for channel 2.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetDataV2D(
        pos: u32,
        size: *mut u32,
        buffer1: *mut f64,
        buffer2: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the ADC buffer in Volt units from the oldest sample to the newest\n one. Output buffer must be at least 'size' long. CAUTION: Use this method\n only when write pointer has stopped (Trigger happened and writing stopped).\n @param channel Channel A or B for which we want to retrieve the ADC buffer.\n @param size Length of the ADC buffer to retrieve. Returns length of filled\n buffer. In case of too small buffer, required size is returned.\n @param buffer The output buffer gets filled with the selected part of the ADC\n buffer.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetOldestDataV(
        channel: rp_channel_t,
        size: *mut u32,
        buffer: *mut f32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the latest ADC buffer samples in Volt units.\n Output buffer must be at least 'size' long.\n @param channel Channel A or B for which we want to retrieve the ADC buffer.\n @param size Length of the ADC buffer to retrieve. Returns length of filled\n buffer. In case of too small buffer, required size is returned.\n @param buffer The output buffer gets filled with the selected part of the ADC\n buffer.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetLatestDataV(
        channel: rp_channel_t,
        size: *mut u32,
        buffer: *mut f32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rp_AcqGetBufSize(size: *mut u32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets the current calibration values from temporary memory to the FPGA filter\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqUpdateAcqFilter(channel: rp_channel_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets the current calibration values from temporary memory to the FPGA filter\n @param channel Channel A or B for which we want to retrieve the ADC buffer.\n @param coef_aa Return AA coefficient.\n @param coef_bb Return BB coefficient.\n @param coef_kk Return KK coefficient.\n @param coef_pp Return PP coefficient.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetFilterCalibValue(
        channel: rp_channel_t,
        coef_aa: *mut u32,
        coef_bb: *mut u32,
        coef_kk: *mut u32,
        coef_pp: *mut u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets generate to default values."]
    pub fn rp_GenReset() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Enables output\n @param channel Channel A or B which we want to enable\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenOutEnable(channel: rp_channel_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Runs/Stop two channels synchronously\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenOutEnableSync(enable: bool) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Disables output\n @param channel Channel A or B which we want to disable\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenOutDisable(channel: rp_channel_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets value true if channel is enabled otherwise return false.\n @param channel Channel A or B.\n @param value Pointer where value will be returned\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenOutIsEnabled(channel: rp_channel_t, value: *mut bool) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets channel signal peak to peak amplitude.\n @param channel Channel A or B for witch we want to set amplitude\n @param amplitude Amplitude of the generated signal. From 0 to max value. Max\n amplitude is 1\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenAmp(channel: rp_channel_t, amplitude: f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets channel signal peak to peak amplitude.\n @param channel Channel A or B for witch we want to get amplitude.\n @param amplitude Pointer where value will be returned.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenGetAmp(channel: rp_channel_t, amplitude: *mut f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets DC offset of the signal. signal = signal + DC_offset.\n @param channel Channel A or B for witch we want to set DC offset.\n @param offset DC offset of the generated signal. Max offset is 2.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenOffset(channel: rp_channel_t, offset: f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets DC offset of the signal.\n @param channel Channel A or B for witch we want to get amplitude.\n @param offset Pointer where value will be returned.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenGetOffset(channel: rp_channel_t, offset: *mut f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets channel signal frequency.\n @param channel Channel A or B for witch we want to set frequency.\n @param frequency Frequency of the generated signal in Hz.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenFreq(channel: rp_channel_t, frequency: f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets channel signal frequency in fpga without reset generator and rebuild\n signal.\n @param channel Channel A or B for witch we want to set frequency.\n @param frequency Frequency of the generated signal in Hz.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenFreqDirect(channel: rp_channel_t, frequency: f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets channel signal frequency.\n @param channel Channel A or B for witch we want to get frequency.\n @param frequency Pointer where value will be returned.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenGetFreq(channel: rp_channel_t, frequency: *mut f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets channel sweep signal start frequency.\n @param channel Channel A or B for witch we want to set frequency.\n @param frequency Frequency of the generated signal in Hz.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenSweepStartFreq(channel: rp_channel_t, frequency: f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets channel sweep signal start frequency.\n @param channel Channel A or B for witch we want to get frequency.\n @param frequency Pointer where value will be returned.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenGetSweepStartFreq(
        channel: rp_channel_t,
        frequency: *mut f32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets channel sweep signal end frequency.\n @param channel Channel A or B for witch we want to set frequency.\n @param frequency Frequency of the generated signal in Hz.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_GenSweepEndFreq(channel: rp_channel_t, frequency: f32) -> ::std::os::raw::c_int;
}
